testdata/baselines/reference/compiler/importAliasTypeOnlyExport.errors.txt
importAliasTypeOnlyExport(1,1): error TS1128: Declaration or statement expected.
importAliasTypeOnlyExport(1,1): error TS1128: Declaration or statement expected.
importAliasTypeOnlyExport(2,11): error TS1003: Identifier expected.
importAliasTypeOnlyExport(2,11): error TS1005: ';' expected.
importAliasTypeOnlyExport(2,26): error TS1128: Declaration or statement expected.
importAliasTypeOnlyExport(2,28): error TS1128: Declaration or statement expected.
importAliasTypeOnlyExport(2,33): error TS1128: Declaration or statement expected.

==== importAliasTypeOnlyExport (7 errors) ====
    
    ~
!!! error TS1128: Declaration or statement expected.
    ~
!!! error TS1128: Declaration or statement expected.
t.ts(1,1): error TS1128: Declaration or statement expected.
t.ts(1,1): error TS1128: Declaration or statement expected.
t.ts(1,12): error TS1003: Identifier expected.
t.ts(1,12): error TS1005: ';' expected.
t.ts(1,27): error TS1128: Declaration or statement expected.
t.ts(2,1): error TS1128: Declaration or statement expected.
t.ts(2,6): error TS1128: Declaration or statement expected.

==== t.ts (7 errors) ====
    import a = require("./a");
    ~~~~
!!! error TS1128: Declaration or statement expected.
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
               ~
!!! error TS1003: Identifier expected.
               ~
!!! error TS1005: ';' expected.
                              ~~
!!! error TS1128: Declaration or statement expected.
    import foo = a.Foo
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
         ~~~~
!!! error TS1128: Declaration or statement expected.
    
a.ts(1,1): error TS1128: Declaration or statement expected.
a.ts(1,1): error TS1128: Declaration or statement expected.
a.ts(1,12): error TS1003: Identifier expected.
a.ts(1,12): error TS1005: ';' expected.
a.ts(2,1): error TS1128: Declaration or statement expected.
a.ts(2,3): error TS1128: Declaration or statement expected.
a.ts(2,8): error TS1128: Declaration or statement expected.

==== a.ts (7 errors) ====
    type Foo = { x: number }
    ~~~~
!!! error TS1128: Declaration or statement expected.
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
               ~
!!! error TS1003: Identifier expected.
               ~
!!! error TS1005: ';' expected.
    export type { Foo };
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
      ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~~~~
!!! error TS1128: Declaration or statement expected.
    
